--- a/docs/app/docs/quickstart.mdx
+++ b/docs/app/docs/quickstart.mdx
@@ -21,7 +21,7 @@ Follow the instruction from [the installation guide](./installing_codex.mdx).
 :::note
 If you want to try Codex before installing it, you can open a cloud shell on your browser using the link below
 
-[![Open In Codex.sh](https://www.khulnasoft/img/codex/open-in-codex.svg)](https://codex.sh/open/templates/tutorial)
+[![Open In Codex.khulnasoft.com](https://www.khulnasoft/img/codex/open-in-codex.svg)](https://codex.khulnasoft.com/open/templates/tutorial)
 :::
 
 ## Create a Development Environment
