--- a/docs/app/docs/installing_codex.mdx
+++ b/docs/app/docs/installing_codex.mdx
@@ -15,7 +15,7 @@ Select your OS below for the steps to install Codex.
 Run the following install script as a *non-root user* to install the latest version of Codex:
 
 ```bash
-curl -fsSL https://get.khulnasoft/codex | bash
+curl -fsSL https://raw.githubusercontent.com/khulnasoft/codex/master/install.sh | bash
 ```
 
 Codex requires the [Nix Package Manager](https://nixos.org/download.html). If Nix is not detected when running a command, Codex will install it for you in single-user mode for Linux. Don't worry: You can use Codex without needing to learn the Nix Language.
@@ -28,7 +28,7 @@ If you would like to install Nix yourself, we recommend the [Determinate Nix Ins
 Run the following install script to install the latest version of Codex:
 
 ```bash
-curl -fsSL https://get.khulnasoft/codex | bash
+curl -fsSL https://raw.githubusercontent.com/khulnasoft/codex/master/install.sh | bash
 ```
 
 Codex requires the [Nix Package Manager](https://nixos.org/download.html). If Nix is not detected when running a command, Codex will install it in multi-user mode for macOS. Don't worry: You can use Codex without needing to learn the Nix Language.
@@ -62,7 +62,7 @@ If you are running an older version of Windows, you may need to follow the [manu
 Run the following script in your WSL2 terminal as a *non-root user* to install Codex.
 
 ```bash
-curl -fsSL https://get.khulnasoft/codex | bash
+curl -fsSL https://raw.githubusercontent.com/khulnasoft/codex/master/install.sh | bash
 ```
 
 Codex requires the [Nix Package Manager](https://nixos.org/download/). If Nix is not detected on your machine when running a command, Codex will automatically install it in single user mode for WSL2. Don't worry: You can use Codex without needing to learn the Nix Language.
